# pmarket-cli

./: Cargo.toml  foo.txt  shell.nix  test.sh
src/: api.rs  commands.rs  errors.rs  main.rs
