[package]
name = "pmarket-cli"
version = "0.1.0"
authors = ["Aaron Janse <aaron@ajanse.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
clap = "3.0.0-beta.1"
dialoguer = "0.6.2"
prettytable-rs = "^0.8"
reqwest = "0.9.18"
serde = "1.0.114"
